# guten-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: config.rs  downloader.rs  index.rs  lib.rs  main.rs  parser.rs
src/cleaner/: constants.rs
src/deprecated/: downloader.rs  mod.rs  parser.rs
src/postprocess/: clean.rs  constants.rs  mod.rs  processor.rs  unarchive.rs
